# scripts

./: .gitignore  README.md
.github/workflows/: caddy.yml  electricity_check.yml  main.yml
arch/: README.md  qemu.sh
arch/i3/: config  i3.md
arch/proxy/: README.md  docker-compose.yml  naive.json  xray.json
arch/sway/: config
audio/: README.md
clash/: docker-compose.yml  up.sh
disk_usage/: ncdu.sh
docker/: README.md  override.conf  ufw.sh
docker/anki/: docker-compose.yml
docker/aria2/: .gitignore  docker-compose-example.yml  docker-compose.yml  up.sh
docker/authelia/: .gitignore  docker-compose.yml
docker/bitwarden/: .env_example  docker-compose.yml
docker/caddy/: .gitignore  Dockerfile  README.md  browse.html  caddy.yml  docker-compose.yml  gen.py
docker/clash/: README.md
electricity_check/: Cargo.toml  Dockerfile  README.md
electricity_check/src/: main.rs
frp/: frpc.ini  frps.ini  share_on_windows.py
initpi/: cloudflare.py  ddns_only.py  example.sensitive_cloudflare.json  home.py  login.py  sensitive.example.json  traffic.py
keepass/: Dockerfile  backup.py
nginx/: README.md  apply.sh  configure.py  nginx.conf  subdomain.conf  tc.py
opus/: tz039 - Opus Config - 2021-11-19.ocb  tz039 - Opus Config - 2022-06-13.ocb
rss/: docker-compose.yml
ssl/: ca.sh
supervisor/: aria.conf  aria.sh  cloudflare.conf  commands.txt  deluge.conf  deluged.conf  filebrowser.conf  filebrowser_noauth.conf  frp.conf  glances.conf  initpi.conf  qbittorrent_enhanced_edition.conf  qzyq_water_sub.conf
web_crawlers/: tencent_meeting.py  wen_quan.ipynb
(+77 files in other folders)
