[package]
name = "electricity_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "gzip"] }
scraper = "0.13"
form_urlencoded = "1.1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
lettre = "0.10"
chrono = "0.4"
